--- a/catalog/templates/catalog/book_list.html
+++ b/catalog/templates/catalog/book_list.html
@@ -7,7 +7,7 @@
     <ul>
         {% for book in book_list %}
         <li>
-            <a href="{{book.get_absoulte_url}}">{{book.title}}</a>
+            <a href="{{ book.get_absolute_url }}">{{book.title}}</a>
             ({{book.author}})
         </li>
         {% endfor %}
